Added instagram handle.

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ owner:
   github: "igauravsehrawat"
   stackexchange: "https://stackexchange.com/users/2489196/igaurav"
   linkedin: "igauravsehrawat"
-  instagram:
+  instagram: "igauravsehrawat"
   flickr:
   tumblr:
   # google plus id, include the '+', eg +mmistakes
